log
Sun Oct 18 17:46:30 UTC 2020: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:56:11: error: redefinition of ‘list’
     List* list=createList();
           ^~~~
sudoku.c:52:11: note: previous definition of ‘list’ was here
     List* list=createList();
           ^~~~
Compilation failed
Sun Oct 18 17:47:00 UTC 2020: 
 sudoku.c | 26 ++++++++++++++++++++++++++
 1 file changed, 26 insertions(+)
 tests:  2|4
total_score: 15/70
c6beceb
Sun Oct 18 18:06:16 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
82995a4
Sun Oct 18 18:06:25 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
d9284fe
Sun Oct 18 18:07:12 UTC 2020: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9032f06
Sun Oct 18 18:08:12 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
5cccc9b
Sun Oct 18 18:08:18 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8024cc1
Sun Oct 18 18:08:36 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
47b2c78
Mon Oct 19 01:25:49 UTC 2020: 
 sudoku.c | 61 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 59 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
ce9e907
Mon Oct 19 01:30:08 UTC 2020: 
 sudoku.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
 tests:  0|5
total_score: 0/70
29cddbc
Mon Oct 19 01:30:22 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4dead72
Mon Oct 19 01:31:29 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
cdae8e4
Mon Oct 19 01:31:55 UTC 2020: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a4641e4
Mon Oct 19 01:32:39 UTC 2020: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 35/70
a5aefe5
Mon Oct 19 01:36:01 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0b69955
Mon Oct 19 01:39:43 UTC 2020: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
9b45db0
Mon Oct 19 01:40:40 UTC 2020: 
 sudoku.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  5|3
total_score: 35/70
9665549
Mon Oct 19 01:42:31 UTC 2020: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
b98889a
Mon Oct 19 01:43:25 UTC 2020: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
b84bb8f
Mon Oct 19 01:52:50 UTC 2020: 
 sudoku.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
593c272
Mon Oct 19 02:33:47 UTC 2020: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  10|0
total_score: 70/70
ca39880
